# topobank-rest-api

./: .gitignore  README.rst  pyproject.toml  test_settings.py  test_urls.py
.github/workflows/: test.yml
tests/: conftest.py  utils.py
tests/analysis/: test_analyses_removal.py  test_analysis_rest_api.py  test_results_view.py  test_serializer.py
tests/authorization/: test_authorization_rest_api.py  test_viewset_endpoints.py
tests/files/: test_files_rest_api.py
tests/manager/: test_handling.py  test_manager_rest_api.py  test_search.py  test_security.py  test_sharing.py  test_surface_summary.py
tests/organizations/: test_organizations_rest_api.py
tests/users/: test_users_rest_api.py
tests/v2/analysis/: test_analysis_api_v2.py  test_filters.py  test_serializers.py  test_views.py
tests/v2/manager/: test_manager_serializers.py
tests/v2/supplib/: test_supplib_integration.py  test_supplib_mixins.py  test_supplib_serializers.py
topobank_rest_api/: apps.py  utils.py  version.py  views.py
topobank_rest_api/analysis/: permissions.py  serializers.py  urls.py
topobank_rest_api/analysis/v1/: controller.py  views.py
topobank_rest_api/analysis/v2/: filters.py  serializers.py  views.py
topobank_rest_api/authorization/: permissions.py  serializers.py  views.py
topobank_rest_api/files/: permissions.py  serializers.py  views.py
topobank_rest_api/files/v2/: serializers.py  views.py
topobank_rest_api/manager/: utils.py
topobank_rest_api/manager/v1/: serializers.py  views.py
topobank_rest_api/manager/v2/: serializers.py  views.py
topobank_rest_api/organizations/: permissions.py  serializers.py  views.py
topobank_rest_api/supplib/: mixins.py  serializers.py
topobank_rest_api/taskapp/: serializers.py
topobank_rest_api/users/: serializers.py  views.py
