[build-system]
requires = ["flit_core>=3.2", "DiscoverVersion"]
build-backend = "flit_core.buildapi"

[project]
name = 'topobank-rest-api'
description = 'Django REST Framework implementation for "topobank"'
requires-python = '>=3.9.0'
dynamic = ['version']
readme = 'README.rst'
license = { file = 'LICENSE' }
authors = [
    { name = "Michael Röttger", email = "info@michael-roettger.de" },
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" }
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 5.2',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content'
]
dependencies = [
    'DiscoverVersion',
    'djangorestframework',
    'drf-spectacular>=0.27.2',
    'django-filter',
    #'topobank',
]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-django>=4.4.0',
    'pytest-mock',
    'pytest-cov',
    'factory-boy',
    'django-test-plus',
]

[project.urls]
homepage = 'https://contact.engineering'
repository = 'https://github.com/ContactEngineering/topobank-rest-api'

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
env = ["DJANGO_SETTINGS_MODULE=topobank.settings.test"]
pythonpath = ["."]
